[package]
name = "rust_text_finder"
version = "1.1.0"
authors = ["James W. Fawcett <jfawcett@twcny.rr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_dir_nav = { path = "../RustDirNav" }
rust_cmd_line = { path = "../RustCmdLine" }
regex = "1.3.7"
#lazy_static = "1.4.0"